# SITUv0

./: .gitignore  pyproject.toml
documents/: memo.md
experiments/prototype/: experiment_data.csv  index.html  stimuli.js
notebooks/: 01_feature_extraction.py  02_visual_preview.py  03_map.py  04_stimuli_select.py  05_convert.py  06_analysis.py
